--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.556.0",
